update react front

--- a/backend/package.json
+++ b/backend/package.json
@@ -13,11 +13,13 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "consign": "^0.1.6",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.3.1",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.2",
-    "postman": "^0.2.0"
+    "postman": "^0.2.0",
+    "pubsub-js": "^1.8.0"
   }
 }
