--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,15 +7,22 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
+    "jquery": "^3.4.1",
+    "node": "^13.8.0",
+    "popper.js": "^1.16.0",
+    "pubsub-js": "^1.8.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.1"
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.3.1",
+    "save": "^2.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "npx nodemon src/index.js"
   },
   "eslintConfig": {
     "extends": "react-app"
